  - Update banlist, default archives, and URLs for the I2P, Tor, and Frost sites
  - Update toolbar icons with higher quality versions courtesy of hummingbird
  - Fix HTTPServ AIOOBE (ticket #1282)
  - Sync buttons sync all or selected (ticket #1233) (thx hikiko)
  - Refactor and fix freenet support (ticket #1424) (thx hikiko)
  - Translation updates
  - New translations: Greek, Italian, Dutch, Brazilian Portuguese, Ukrainian, Chinese, Turkish

* 2014-01-20 1.105b-0 (kytv)
  - French translation updates
  - New Romanian translation

* 2013-11-18 1.104b-7-rc (kytv, zzz)
  - Update to SWT 3.8.2 20130131
  - Disable clearnet SSL, not available until I2P 0.9.9
  - Translation updates: French, Portuguese, Russian
  - Fix NPE in SyndieTreeListener

* 2013-10-28 1.104b-6-rc (zzz, kytv)
  - Add clearnet SSL fetch support
  - Translation updates: French, Spanish
  - New translations: Portuguese, Polish

* 2013-10-23 1.104b-5 (zzz)
  - Don't display PBE messages after deletion
  - Add menu item to delete PBE messages and forums
  - Add keyboard shortcuts in message view tab

* 2013-10-21 1.104b-4 (zzz)
  - Fix dup archive in Syndicator Tab after rename
  - Reduce default pull policy to 14 days
  - Only pull indexes needed for pulled messages

* 2013-10-21 1.104b-3 (zzz)
  - Fix cause of DB corruption / dup forums in -2
  - Fetch messages newest-first

* 2013-10-15 1.104b-2 (zzz)
  HSQLDB 2, DB upgrades, LOBs:
  - hsqldb 2.3.1
  - Update to DB version 25:
    - Add LOBs for attachments and pages
    - Increase length limits on cancelledURI, headerValue, and others
  - Implement offline database backup
  - Backup database before upgrading to hsqldb 2.x
  - Add code to migrate large things to LOBs
  - Enable migration of large attachments and pages to LOBs
  - Implement retrieval of pages and attachments from LOBs
  - Implement getAttachmentAsStream for real (unused yet)
  - Implement storage to LOBs in ImportPost
  - Sleep a while before shutdown compact