@@ -27,34 +27,28 @@ archive.2.proxy=127.0.0.1:4444
 archive.2.pullpolicy=RecentMessagesOnly
 archive.2.syncbydefault=true
 ##########################################
-archive.3.name=syndie.killyourtv.i2p
-archive.3.url=http://syndie.killyourtv.i2p/?i2paddresshelper=4JTkFMNVkouHpKuzAqDaU0n0vkn9vko9BqrbkFR2Xza8u6gfHZCH6JPARwoumSEzs-Ri5MMEkuHpCQZ9Fv0IWnx18kqUQzL5GY1m5~NznohaHuKPIlwC0UNVSGF8Qm2F1W8O2XdrYjgqnaNqjH5JNM0xNUlAtIOsO4xJ0-5hQSBhp4vQiXLkVH0fDseij9-cq6IMH-~m6KrZfEpoTyrU6ov3I1ERifan8FNXjUFjQqMWNq-eyC4-TJNhHz9KoHgzqyhN2i38nOkAGPX9gjF9oWTG8SIBxTxXj07n28QUmASLlwBGarJzHF363NbIWGJGfHUtDKN0kIbsFMGdurDmnm~oIkzoJcSevSQKF082CRCXM1dC7kzBeJP9sCR02hDVlZOyUrt7y07gI86RkBmN4UC3U~pbazongBPuIjsSWhTQwPn-EJnYBCqODLj23YWtw2wiHetzxjjnMW3ODRF2T-gx1NC2VH3W1Scki1eka04So5OTHJIetG1CjPD3XrucAAAA
+archive.3.name=syndie.welterde.i2p
+archive.3.url=http://syndie.welterde.i2p/?i2paddresshelper=tYPP3G3Ul1wXDxyotkqzT7wCHHm0c4e-JeKbWSU0dbPI3lGm1hxKEMHXRORk8VrxaGZz1UtnQp3ERMY-8zEd~D56v4Bw0PLu~KV~pTxE7RNld-ACKTBYGj6OBmWcNYHCqjzakJOLUzZKydJDphTa3Fozpp1UyoXtZU-u8p6VJeFMhBUT1AkvCxFThFyQUmQ~zFit-LSL3TG2Y564X4b7NeWBQ4HvrxsUBgga0IJhKiLO4rXeUk~DmjwyM~nyLT2puTEJqm8T44CoglVpnJiqG6hENPCTnZ0Qh5ecZjWrP8e5jo4Dr3bYV17pSxBzeYdqOSEU4LnWAqh1fAsLolkBOHaL9Qb2JjMV-1cXlwowx8XA0pHcgIFSi-sfpRHNs0eRWIqmJEerKJiV1oS1TKM3mUCDNXw0n1L6aXFroeY-zDo5RL4lNdXvXTaw6uKIbnVgZt9qflLPp871CfEfpK27fNRlvNvQp7B2xlGCqODACL5~SKZH~28BvuCiWVHgxuEJAAAA
 archive.3.proxy=127.0.0.1:4444
 archive.3.pullpolicy=RecentMessagesOnly
-archive.3.syncbydefault=true
+archive.3.pushpolicy=SendNothing
+archive.3.syncbydefault=false
 ##########################################
-archive.4.name=syndie.welterde.i2p
-archive.4.url=http://syndie.welterde.i2p/?i2paddresshelper=tYPP3G3Ul1wXDxyotkqzT7wCHHm0c4e-JeKbWSU0dbPI3lGm1hxKEMHXRORk8VrxaGZz1UtnQp3ERMY-8zEd~D56v4Bw0PLu~KV~pTxE7RNld-ACKTBYGj6OBmWcNYHCqjzakJOLUzZKydJDphTa3Fozpp1UyoXtZU-u8p6VJeFMhBUT1AkvCxFThFyQUmQ~zFit-LSL3TG2Y564X4b7NeWBQ4HvrxsUBgga0IJhKiLO4rXeUk~DmjwyM~nyLT2puTEJqm8T44CoglVpnJiqG6hENPCTnZ0Qh5ecZjWrP8e5jo4Dr3bYV17pSxBzeYdqOSEU4LnWAqh1fAsLolkBOHaL9Qb2JjMV-1cXlwowx8XA0pHcgIFSi-sfpRHNs0eRWIqmJEerKJiV1oS1TKM3mUCDNXw0n1L6aXFroeY-zDo5RL4lNdXvXTaw6uKIbnVgZt9qflLPp871CfEfpK27fNRlvNvQp7B2xlGCqODACL5~SKZH~28BvuCiWVHgxuEJAAAA
-archive.4.proxy=127.0.0.1:4444
-archive.4.pullpolicy=RecentMessagesOnly
-archive.4.pushpolicy=SendNothing
+archive.4.name=archive.i2p-projekt.de:8080 (clearnet)
+archive.4.url=http://archive.i2p-projekt.de:8080
+archive.4.pushpolicy=RecentMessagesOnly
 archive.4.syncbydefault=false
 ##########################################
-archive.5.name=archive.i2p-projekt.de:8080 (clearnet)
-archive.5.url=http://archive.i2p-projekt.de:8080
-archive.5.pushpolicy=RecentMessagesOnly
+archive.5.name=syndie.welterde.de (clearnet)
+archive.5.url=http://syndie.welterde.de/
+archive.5.pushpolicy=SendNothing
 archive.5.syncbydefault=false
 ##########################################
-archive.6.name=syndie.welterde.de (clearnet)
-archive.6.url=http://syndie.welterde.de/
-archive.6.pushpolicy=SendNothing
+archive.6.name=syndielzlvbxdsah.onion:8080 (Tor)
+archive.6.url=http://syndielzlvbxdsah.onion:8080
+archive.6.proxy=127.0.0.1:8118
+archive.6.pullpolicy=RecentMessagesOnly
 archive.6.syncbydefault=false
-##########################################
-archive.7.name=syndielzlvbxdsah.onion:8080 (Tor)
-archive.7.url=http://syndielzlvbxdsah.onion:8080
-archive.7.proxy=127.0.0.1:8118
-archive.7.pullpolicy=RecentMessagesOnly
-archive.7.syncbydefault=false
 ##########################################
 
 ##########################################
@@ -68,6 +62,12 @@ archive.7.syncbydefault=false
 ###########################################
 #archive.3.name=syndie.darrob.i2p
 #archive.3.url=http://syndie.darrob.i2p/?i2paddresshelper=0YtfmegUav8tzX5V2XtYmPS5AZSPEnqkaJZ4gVaqDPJesL00sZPtZ8Ipag~wzu5-7epNuI35FLiH5QdF9Z7zNWrc5egcC6M5gNb-7eDAgwpUKhBxFk8nmesCWd13alK3c-bTJ-xup1Ohv8liPm8-wEMIL4DjFe1fzfBVLg2k5OKDNzc~kFK3FzQqnJetfZYcrE~xSn67Po0VIXF7CbAz8Ay0WjGj6u2iHJJ1Q-yaxKkSLaiYK4KJDSHJFbEXA-EhwmdgQhzPMNRpwWNBM0KptmbKRpH6f7XRp6l6sFonIxLqq3miT9NPy1rZeT-5A~Qwin38nExKgM2BUfQqKEEBi49fC8GJOiEpHIPMFjyQWrXXAjmQIzp2Pg1H3FrWqu1ZHJZmCK0-MyMPlkzHOEWINqNVG9-bmqjeLoHGryGsWWmRRVmzsSJnMbf3HAvFC-aE~Wa4oAFokWiORzzesVfY9DCG2jhM7jEqo0AMxz9BstkMKPADIuRd3j8XHsDEkCgXAAAA
+#archive.3.proxy=127.0.0.1:4444
+#archive.3.pullpolicy=RecentMessagesOnly
+#archive.3.syncbydefault=true
+##########################################
+#archive.3.name=syndie.killyourtv.i2p
+#archive.3.url=http://syndie.killyourtv.i2p/?i2paddresshelper=4JTkFMNVkouHpKuzAqDaU0n0vkn9vko9BqrbkFR2Xza8u6gfHZCH6JPARwoumSEzs-Ri5MMEkuHpCQZ9Fv0IWnx18kqUQzL5GY1m5~NznohaHuKPIlwC0UNVSGF8Qm2F1W8O2XdrYjgqnaNqjH5JNM0xNUlAtIOsO4xJ0-5hQSBhp4vQiXLkVH0fDseij9-cq6IMH-~m6KrZfEpoTyrU6ov3I1ERifan8FNXjUFjQqMWNq-eyC4-TJNhHz9KoHgzqyhN2i38nOkAGPX9gjF9oWTG8SIBxTxXj07n28QUmASLlwBGarJzHF363NbIWGJGfHUtDKN0kIbsFMGdurDmnm~oIkzoJcSevSQKF082CRCXM1dC7kzBeJP9sCR02hDVlZOyUrt7y07gI86RkBmN4UC3U~pbazongBPuIjsSWhTQwPn-EJnYBCqODLj23YWtw2wiHetzxjjnMW3ODRF2T-gx1NC2VH3W1Scki1eka04So5OTHJIetG1CjPD3XrucAAAA
 #archive.3.proxy=127.0.0.1:4444
 #archive.3.pullpolicy=RecentMessagesOnly
 #archive.3.syncbydefault=true
