@@ -7,3 +7,4 @@ license=Public Domain
 websiteURL=http://syndie.i2p2.de/
 disableStop=true
 min-java-version=1.6
+min-i2p-version=0.9.9
