@@ -312,9 +312,7 @@ class IndexFetcher {
                     throw new IOException("https with proxy unsupported");
                 SSLEepGet.SSLState state = _manager.getSSLState();
                 // lastmod unsupported
-                if (true)
-                    throw new IOException("HTTPS requires I2P 0.9.9");
-                SSLEepGet sget = null; // new SSLEepGet(I2PAppContext.getGlobalContext(), indexFile.getPath(), url, state);
+                SSLEepGet sget = new SSLEepGet(I2PAppContext.getGlobalContext(), indexFile.getPath(), url, state);
                 if (state == null)
                     _manager.setSSLState(sget.getSSLState());
                 get = sget;
