@@ -380,9 +380,7 @@ class SyncInboundFetcher {
                         if (shouldProxy)
                             throw new IOException("https with proxy unsupported");
                         SSLEepGet.SSLState state = _manager.getSSLState();
-                        if (true)
-                            throw new IOException("HTTPS requires I2P 0.9.9");
-                        SSLEepGet sget = null; // new SSLEepGet(I2PAppContext.getGlobalContext(), dataFile.getAbsolutePath(), url, state);
+                        SSLEepGet sget = new SSLEepGet(I2PAppContext.getGlobalContext(), dataFile.getAbsolutePath(), url, state);
                         if (state == null)
                             _manager.setSSLState(sget.getSSLState());
                         get = sget;
