@@ -85,6 +85,7 @@ public class ViewMetadata extends CommandImpl {
         return client;
     }
     
+/****
     public static void main(String args[]) {
         try {
         CLI.main(new String[] { "viewmetadata", 
@@ -94,4 +95,5 @@ public class ViewMetadata extends CommandImpl {
                                 "--channel", "2klF2vDob7M82j8ZygZ-s9LmOHfaAdso5V0DzLvHISI=" });
         } catch (Exception e) { e.printStackTrace(); }
     }
+****/
 }
